# hippunfold_morphometry_toolbox_tle

./: README.md  preproc_and_hippunfold.smk  pyproject.toml
config/: config.yml  demographics.tsv  demographics_5C_5P.tsv  demographics_alldata_present_19_02_2023.tsv  list_of_subjects_excluded_and_rationale.tsv  list_of_subjects_missing_some_hippunfold_data.tsv  participants.tsv  participants_5C_5P.tsv  participants_alldata_present_19_02_2023.tsv
workflow/: Snakefile
workflow/rules/: .hippunfold_TLE_subfields_displacement.smk.swp  hippunfold_TLE_subfields_additional_metrics.smk  hippunfold_TLE_subfields_curvature_gyrification.smk  hippunfold_TLE_subfields_displacement.smk  hippunfold_TLE_subfields_displacement_metric.smk  hippunfold_TLE_subfields_thickness_surfarea.smk  hippunfold_TLE_subfields_volumetry.smk
workflow/scripts/: curvature_morphometry_midthickness_analysis.py  displacement_morphometry_surfs_analysis.py  group_curvature_morphometry_surfs_analysis.py  group_displacement_morphometry_surfs_analysis.py  group_gyrification_morphometry_surfs_analysis.py  group_metrics_morphometry_midthickness_analysis.py  group_surfarea_morphometry_surfs_analysis.py  group_thickness_morphometry_surfs_analysis.py  group_volumetry_subfields.py  gyrification_morphometry_midthickness_analysis.py  metrics_morphometry_midthickness_analysis.py  statistical_tests_stats_group_displacement_morphometry_surfs_analysis.py  stats_group_displacement_morphometry_surfs_analysis.py  stats_group_volumetry_subfields.py  surfarea_morphometry_midthickness_analysis.py  volumetry_subfields.py  (+1 more)
