[tool.poetry]
name = "hippunfold-morphometry-toolbox-tle"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "hippunfold_morphometry_toolbox_tle"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
snakebids = "^0.7.2"
numpy = "^1.24.2"
pandas = "^1.5.3"
scipy = "^1.10.1"
nibabel = "^5.0.1"
matplotlib = "^3.7.0"
poethepoet = "^0.18.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
snakefmt = "^0.8.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poe.tasks]
quality_check = { shell = "isort ./workflow/scripts/*.py -c && black . --check && snakefmt . --check" }
quality_fix = { shell = "isort ./workflow/scripts/*.py && black .  && snakefmt ." }

[tool.isort]
profile = "black"
multi_line_output = 3


